<resources>
    <string name="sound_recorder_title">Sound Recorder</string>
    <string name="sound_recorder_ready">Ready to record</string>
    <string name="sound_recorder_record">Record</string>
    <string name="sound_recorder_stop">Stop</string>
    <string name="sound_recorder_play">Play</string>
    <string name="test_version_ram">RAM:</string>
    <string name="test_version_ram2">运行内存：</string>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Device Test</string>
    <string name="app_result">Test Result</string>
    <string name="but_test_all">Test All</string>
    <string name="but_test_version">Version</string>
    <string name="but_test_color">LCD</string>
    <string name="but_test_touchpanel">TouchPanel</string>
    <string name="but_test_gps">GPS</string>
    <string name="but_test_sd">SDCard</string>
    <string name="but_test_flashlight">FlashLight</string>
    <string name="but_test_camera">Camera</string>
    <string name="but_test_wifi">WiFi</string>
    <string name="but_test_bluetooth">Bluetooth</string>
    <string name="but_test_backlight">BackLight</string>
    <string name="but_test_power">Battery</string>
    <string name="but_test_keyboard">Keyboard</string>
    <string name="but_test_fm">FM</string>
    <string name="but_test_vibrate">Vibrate</string>
    <string name="but_test_gravity_sensor">Gravity</string>
    <string name="but_test_magnetic_sensor">Magnetic</string>
    <string name="but_test_light_sensor">Light</string>
    <string name="but_test_distance_sensor">Distance</string>
    <string name="but_test_speaker">Speaker</string>
    <string name="but_test_earphone">Earphone</string>
    <string name="but_test_sim">SimCard</string>
    <string name="but_test_headset">Headset</string>
    <string name="but_test_mic">MicPhone</string>
    <string name="but_test_phone">Phone</string>
    <string name="but_test_imei">MEI</string>
    <string name="btn_fail">Fail</string>
    <string name="btn_succeed">Success</string>
    <string name="test_vibrate_ask">Vibrate or not?</string>
    <string name="but_return">Back</string>
    <string name="but_retest">Retest</string>
    <string name="but_changecolor">Change color</string>
    <string name="but_next">Next test</string>
    <string name="but_exit">Exit</string>
    <string name="but_camera_open">Open Camera</string>
    <string name="but_camera_exit">Close Camera</string>
    <string name="but_wifi_open">Open WiFi</string>
    <string name="but_wifi_close">Close WiFi</string>
    <string name="but_bluetooth_open">Open Bluetooth</string>
    <string name="but_bluetooth_close">Close Bluetooth</string>
    <string name="but_mic_rec">Record start</string>
    <string name="but_mic_stop">Record stop to play</string>
    <string name="but_mic_no_sd">Insert SD Card!</string>
    <string name="test_sd_mess1">SD plugged In！</string>
    <string name="test_sd_mess2">SD plugged Out!</string>
    <string name="test_sd_mess3">Create File Successed in SD card!</string>
    <string name="test_sd_mess4">Delete File Successed in SD card!</string>
    <string name="test_sd_mess5">Create File Failed in SD card!</string>
    <string name="test_sd_mess6">Delete File Failed in SD card!</string>
    <string name="test_color_mess">Click Change color to test ok?</string>
    <string name="test_fm_play">Play</string>
    <string name="test_fm_stop">Stop</string>
    <string name="test_fm_search">Search</string>
    <string name="test_fm_done">Done</string>
    <string name="test_fm_empty_list">No Channels</string>
    <string name="test_fm_search_done_info">Total %d Channels</string>
    <string name="test_fm_sound_spk">Speaker</string>
    <string name="test_fm_sound_ear">Earphone</string>
    <string name="test_fm_searching">Searching..</string>
    <string name="test_fm_please_wait">Waiting..</string>
    <string name="test_fm_please_plug_earphone">Plug in earphone</string>
    <string name="test_camera_mess">ClickOpen Camera to test Camera！</string>
    <string name="test_wifi_mess">ClickOpen Wifi/Close Wifi to test wifi！</string>
    <string name="test_wifi_mess_enable">Open WiFi Successed</string>
    <string name="test_wifi_mess_disable">Close WiFi Failed！</string>
    <string name="test_wifi_mess_state_changed">WiFi State chagned！</string>
    <string name="test_wifi_mess_error">Unkown wifi state！</string>
    <string name="test_bluetooth_mess">Click“Open Bluetooth/Close Bluetooth”to test！</string>
    <string name="test_bluetooth_mess_error">Unkown Bluetooth state！</string>
    <string name="menu_settings">Settings</string>
    <string name="but_factoryreset">Reset</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="test_power_status">Power State:</string>
    <string name="test_power_plug">Power Plug:</string>
    <string name="test_power_level">Current Power Level:</string>
    <string name="test_power_scale">Power Scale:</string>
    <string name="test_power_health">Power Health:</string>
    <string name="test_power_voltage">Current Voltage:</string>
    <string name="test_power_temp">Temperature:</string>
    <string name="test_power_tech">Technique:</string>
    <string name="test_power_time">Time:</string>
    <string name="test_keyboard_invalidkey">Unkown key:</string>
    <string name="test_keyboard_tip">Press key :</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="test_wifi_opening">WiFi Opening ...</string>
    <string name="test_wifi_open">WiFi Open.</string>
    <string name="test_wifi_close">WiFi Close.</string>
    <string name="test_wifi_invalid">WiFi Unusable.</string>
    <string name="test_wifi_no_network">No WiFi Network.</string>
    <string name="test_wifi_signal">Signal Level:</string>
    <string name="test_bt_opening">Bluetooth Opening...</string>
    <string name="test_bt_searching">Searching bluetooth device...</string>
    <string name="test_bt_invalid">Bluetooth invalid.</string>
    <string name="test_bt_no_devices">No other bluetooth devices.</string>
    <string name="test_gps_close">GPS Closed</string>
    <string name="test_gps_location_fail">GPS located failed!</string>
    <string name="test_gps_number">GPS star num:</string>
    <string name="test_gps_latitude">Latitude:</string>
    <string name="test_gps_longitude">Longitude :</string>
    <string name="test_gps_speed">Speed:</string>
    <string name="test_gps_bear">Bear:</string>
    <string name="test_gps_altitude">Altitude:</string>
    <string name="test_gps_satellite_id">Satellite_ID:</string>
    <string name="test_gps_search">GPS searching...</string>
    <string name="test_gps_searchfinish">Search finish:</string>
    <string name="test_gps_open_please">Open GPS to test!</string>
    <string name="test_gps_open_or_not">Open GPS or not?</string>
    <string name="test_gps_open_OK">OK</string>
    <string name="test_gps_open_Cancel">Cancel</string>
    <string name="test_touchpanel_result">Test result is ok ?</string>
    <string name="test_touchpanel_yes">Yes</string>
    <string name="test_touchpanel_no">No</string>
    <string name="test_sim_state">Sim card state1:</string>
    <string name="test_sim_state_ok">Good</string>
    <string name="test_sim_state_unknow">sim card is locked or unknown state!</string>
    <string name="test_sim_state_absent">sim card absent</string>
    <string name="test_sim1">Sim 1 info:</string>
    <string name="test_sim2">Sim 2 info</string>
    <string name="test_sim_imei">IMEI:</string>
    <string name="test_sim_serialnumber">ICCID:</string>
    <string name="test_sim_operator">Operator:</string>
    <string name="test_sim_operatorname">OperatorName:</string>
    <string name="test_sim_operatorname_telecom">Telecom</string>
    <string name="test_sim_operatorname_unicom">Unicom</string>
    <string name="test_sim_operatorname_mobile">China mobile</string>
    <string name="test_sim_line1number">Number:</string>
    <string name="test_sound_ask">Hearing music？</string>
    <string name="test_autotesting">Exit autotest with long click Back key</string>
    <string name="test_sensor_xyz">xyz</string>
    <string name="test_sensor_light">Light：</string>
    <string name="test_sensor_distance">Distance：</string>
    <string name="test_sensor_tips">Tips：</string>
    <string name="test_version_xh">Model:</string>
    <string name="test_version_chip">Chip:</string>
    <string name="test_version_board">Brand:</string>
    <string name="test_version_camerapixel">Camera Pixel:</string>
    <string name="test_version_kernelver">Kernel version:</string>
    <string name="test_version_androidver">Android version:</string>
    <string name="test_version_basever">Base version:</string>
    <string name="test_version_date">Build date：</string>
    <string name="test_version_screensize">Screen Size:  </string>
    <string name="test_sensor_light_level">Light Level:</string>
    <string name="test_sensor_current">Current：</string>
    <string name="test_sensor_threshold">Threshold：</string>
    <string name="test_sensor_set_threshold">Change Threshold to current value：</string>
    <string name="test_sensor_reset">Set</string>
    <string name="test_sensor_type">SensorType：</string>
    <string name="but_languagechange">En/中文</string>
    <string name="TouchScreen_HandWriting">TouchScreen_HandWriting</string>
    <string name="but_test_compass">Compass</string>
    <string name="but_test_finger">Finger</string>
    <string name="but_test_motherboard">Motherboard Calibration:</string>
    <string name="but_test_nfc">NFC</string>
    <string name="but_test_tee">TEE</string>
    <string name="but_test_tee_02">TEE</string>
    <string name="imei1">IMEI1:</string>
    <string name="imei2">IMEI2:</string>
    <string name="sn1">SN1:</string>
    <string name="sn2">SN2:</string>
    <string name="test_otg">OTG</string>
</resources>