<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_status" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_status_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_plug" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_plug_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_level" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_level_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_scale" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_scale_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_health" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_health_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_voltage" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_vol_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_temp" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_temp_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_tech" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_tech_id" style="@style/battery_style_2"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/test_power_time" style="@style/battery_style_1"/>
            <TextView android:id="@+id/power_time_id" style="@style/battery_style_2"/>
        </LinearLayout>
    </LinearLayout>
    <com.dismal.devicetest.ui.TestConfirm android:id="@+id/power_confirm" android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
