<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:id="@+id/version_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_xh"/>
                <TextView android:id="@+id/model" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_chip"/>
                <TextView android:id="@+id/chip" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_board"/>
                <TextView android:id="@+id/board" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_camerapixel"/>
                <TextView android:id="@+id/camera_mode" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_kernelver"/>
                <TextView android:id="@+id/kernel_version" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_androidver"/>
                <TextView android:id="@+id/android_version" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_basever"/>
                <TextView android:id="@+id/base_version" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_ram"/>
                <TextView android:id="@+id/ram_info" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_date"/>
                <TextView android:id="@+id/build_date" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_version_screensize"/>
                <TextView android:id="@+id/screen_size" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/imei1_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/imei1"/>
                <TextView android:id="@+id/imei1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/version_layout_imei2" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/imei2"/>
                <TextView android:id="@+id/imei2" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/sn1_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sn1"/>
                <TextView android:id="@+id/sn1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/version_layout_sn2" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sn2"/>
                <TextView android:id="@+id/sn2" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/but_test_motherboard"/>
                <TextView android:id="@+id/motherboard" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.dismal.devicetest.ui.TestConfirm android:id="@+id/version_confirm" android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
